test/Fail/Issue5201.err
Issue5201.agda:6.22: error: [ParseError]
Malformed syntax declaration: syntax must not contain adjacent holes (f x)
